# agentic-stlc-kane-hyperexecute

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEMO_SCRIPT.md  GEMINI.md  LICENSE  PIPELINE.md  README.md  USAGE.md  VOICEOVER.md  agentic-stlc.config.yaml  hyperexecute.yaml  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: agentic-sdlc-claude.yml  agentic-sdlc.yml  agentic-stlc-claude.yml  agentic-stlc.yml  build-gemma-runner.yml  hyperexecute-scale.yml  kaneai-verification.yml  reporting.yml  requirements-analysis.yml
adapters/: __init__.py  azure_devops.py  base.py  github.py  gitlab.py  hyperexecute.py  jenkins.py  kaneai.py  playwright.py
astlc/: __init__.py  artifact_cache.py  chat_reporter.py  config.py  conversation.py  credential_validator.py  execution_engine.py  file_ingestor.py  pipeline.py  pipeline_monitor.py  report_collector.py  state_engine.py
astlc/agents/: __init__.py  base.py  claude.py  codex.py  context_sync.py  copilot.py  gemini.py  orchestrator.py  router.py
ci/: agent.py  analyze_hyperexecute_failures.py  analyze_requirements.py  build_traceability.py  collect_kane_exports.py  coverage_analysis.py  demo_kane_results.json  failure_intelligence.py  fetch_api_details.py  fetch_rca.py  generate_tests_from_scenarios.py  impact_analysis.py  manage_scenarios.py  normalize_artifacts.py  notify_agent.py  pipeline_metrics.py  quality_gates.py  release_recommendation.py  scenario_confidence.py  select_tests.py  self_healing.py  stage_utils.py  validate_report.py  write_github_summary.py
cli/: __init__.py  main.py
docker/: Dockerfile.gemma-runner  entrypoint.sh
docs/: token-efficiency-report.md
kane/: objectives.json
platform/: __init__.py  pipeline.py  registry.py  telemetry.py
requirements/: acceptance-criteria.md  analyzed_requirements.json  cart.txt  epic-inspection-management.md  execution-metrics.md  iphone.txt  kaneai-test-intent.md  playwright-mapping.md  search.txt  traceability-matrix.md  user-stories.md
scenarios/: scenarios.json
scripts/: agentic-stlc.js  init.js  postinstall.js  validate.js
skills/: __init__.py  artifact_collection.py  base.py  claude_feedback.py  confidence_analysis.py  coverage_analysis.py  git_operations.py  hyperexecute_monitoring.py  playwright_generation.py  rca.py  requirement_parsing.py  scenario_generation.py  workflow_monitor.py  workflow_trigger.py
templates/config/: agentic-stlc.config.yaml.example
templates/github_actions/: workflow.yml.j2
templates/playwright/: conftest.py.j2
(+8 files in other folders)
